changed some text

--- a/flaskProject1/templates/home.html
+++ b/flaskProject1/templates/home.html
@@ -1,4 +1,4 @@
-<html lang="bg">
+ <html lang="bg">
     <head>
       <title>Home</title>
       <meta charset="utf-8">
@@ -62,7 +62,7 @@
         <div class = "content">
             <h1>Нашата цел!</h1>
                 <p>
-                    С ElsysLearn целим да подпомогнем учебния процес в ТУЕС, като сме решили да се концентрираме върху специалните предмети.
+                    С ElsysLearn ние целим да подпомогнем учебния процес в ТУЕС, като сме решили да се концентрираме върху специалните предмети.
                     Всички уроци, в тази платформа, ще бъдат водени лично от нас. Затова смятаме, че обучението ученик-ученик би било много полезно.
                 </p>
         </div>
