Changed minor faults in home.html

--- a/flaskProject1/templates/home.html
+++ b/flaskProject1/templates/home.html
@@ -51,10 +51,9 @@
 
 
             <p>
-                    ТУЕС(Технологично Училище Електронни Системи) не е просто училище, а цяла една общност. През изминалите години осъзнах колко важни
+                    ТУЕС(Технологично Училище Електронни Системи към ТУ) не е просто училище, а цяла една общност. През изминалите години осъзнах колко важни
                     са всъщност приятелствата, които изграждам сега, защото след време ще имам нужда от тях. Начинът и нивото на обучение са различни, от
-                    което и да е друго училище и това се отразя много върху личностната самооценка на човек. ТУЕС не е някое квартално училище!
-                    Жица е на баба ти простора!!!
+                    което и да е друго училище и това се отразява много върху личностната самооценка на човек. ТУЕС не е някое квартално училище!
             </p>
         </div>
         <div class="parallax1"></div>
