Replacement of MongoDB Login/Registration

--- a/flaskProject1/templates/login1.html
+++ b/flaskProject1/templates/login1.html
@@ -10,9 +10,9 @@
 </head>
 
 <body>
-    <div class="login-page">
-
-    </div>
+  <div class = "form">
+    <form action="" method="post" class="login-page"></form>
+</div>  
 
     <script src="https://unpkg.com/react@16/umd/react.production.min.js" crossorigin></script>
     <script src="https://unpkg.com/react-dom@16/umd/react-dom.production.min.js" crossorigin></script>
