--- a/flaskProject1/static/css/register1.css
+++ b/flaskProject1/static/css/register1.css
@@ -1,111 +1,79 @@
-@import url(https://fonts.googleapis.com/css?family=Roboto:300);
+.form-group{
+    margin-bottom: 50px;
+}
 
-.login-page {
-  width: 360px;
-  padding: 8% 0 0;
-  margin: auto;
+label{
+    font-size: 28px;
+    color: #4CAF50;
 }
-.form {
-  background-color: #8b9099;
-  position: relative;
-  z-index: 1;
 
-  max-width: 360px;
-  padding: 45px;
-  text-align: center;
-  box-shadow: 0 0 20px 0 rgba(0, 0, 0, 0.2), 0 5px 5px 0 rgba(0, 0, 0, 0.24);
-  margin: 100px auto;
+input{
+    margin-top: 5px;
+    font-size: 20px;
 }
-.form input {
-  font-family: "Roboto", sans-serif;
-  outline: 0;
-  background: #f2f2f2;
-  width: 100%;
-  border: 0;
-  margin: 0 0 15px;
-  padding: 15px;
-  box-sizing: border-box;
-  font-size: 14px;
-}
-.form button {
-  font-family: "Roboto", sans-serif;
-  text-transform: uppercase;
-  outline: 0;
-  background: #4CAF50;
-  width: 100%;
-  border: 0;
-  padding: 15px;
-  color: #FFFFFF;
-  font-size: 14px;
-  cursor: pointer;
-}
-.form button:hover,.form button:active,.form button:focus {
-  background: #43A047;
-}
-.form .message {
-  margin: 15px 0 0;
-  color: #b3b3b3;
-  font-size: 18px;
-}
-.form .message a {
-  color: #4CAF50;
-  text-decoration: none;
 
+.l1{
+    margin-bottom: 10px;
 }
-.form .register-form {
-  display: none;
+
+button{
+    border:solid 1px #000000;
+    border-radius: 4px;
+    background-color: #05bd05;
+    color: #000000;
+    height: 40px;
+    width: 275px;
+    font-size: 28px;
+    margin-top: -15px;
+    margin-bottom: 25px;
 }
-.container {
-  position: relative;
-  z-index: 1;
-  max-width: 300px;
-  margin: 0 auto;
+
+button:hover{
+    background-color: #107805;
+    color: white;
 }
-.container:before, .container:after {
-  content: "";
-  display: block;
-  clear: both;
+
+.loginText {
+    font-size: 30px;
+    transition-timing-function: ease-out;
+    text-align: center;
+    padding-bottom: 10px;
+    -webkit-animation-duration: 10s;
+    animation-duration: 2.5s;
+    -webkit-animation-fill-mode: both;
+    animation-fill-mode: both;
+    margin-bottom: 40px;
 }
-.container .info {
-  margin: 50px auto;
-  text-align: center;
-}
-.container .info h1 {
-  margin: 0 0 15px;
-  padding: 0;
-  font-size: 36px;
-  font-weight: 300;
-  color: #1a1a1a;
-}
-.container .info span {
-  color: #4d4d4d;
-  font-size: 12px;
-}
-.container .info span a {
-  color: #000000;
-  text-decoration: none;
-}
-.container .info span .fa {
-  color: #EF3B3A;
-}
-body {
-  /*background-image: url(tues_logo_transperent.png);*/
-  background-image: url(milky-way.jpg);
-  background-color: cornflowerblue;
-  /*background: #76b852; !* fallback for old browsers *!*/
-  /*background: -webkit-linear-gradient(right, #76b852, #8DC26F);*/
-  /*background: -moz-linear-gradient(right, #76b852, #8DC26F);*/
-  /*background: -o-linear-gradient(right, #76b852, #8DC26F);*/
-  /*background: linear-gradient(to left, #76b852, #8DC26F);*/
-  font-family: "Roboto", sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-  background-attachment: fixed;
-  background-position: center;
-  background-repeat: no-repeat;
-  background-size: cover;
-}
- h2{
+
+h2{
    margin-top: -10px;
    margin-bottom: 30px;
- }
+   font-size: 40px;
+   color: #4CAF50;
+}
+
+body {
+  margin: 0;
+  background-color: #000;
+}
+
+.container {
+  background-color:rgba(255,255,255,.8);
+  border-radius:.25em;
+  box-shadow:0 0 .25em rgba(0, 0, 0, 0.25);
+  box-sizing:border-box;
+  left:50%;
+  padding: 5vmin 10vmin;
+  position:fixed;
+  text-align:center;
+  top:50%;
+  transform:translate(-50%, -50%);
+  z-index: 1;
+  margin-top: -25px;
+}
+
+#canv{
+  position: fixed;
+  top: 0;
+  left: 0;
+}
