--- a/flaskProject1/templates/register.html
+++ b/flaskProject1/templates/register.html
@@ -1,18 +1,19 @@
 <html lang="bg">
     <head>
-        <title>Login</title>
+        <title>Register</title>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
 
-        <link rel = "stylesheet" href="../static/css/login1.css">
+        <link rel = "stylesheet" href="../static/css/register.css">
     </head>
+
 
     <body>
         <canvas id='canv'>
 
         </canvas>
-            <div class = "container">
-            <form action="" method="post" class="login-page">
+        <div class = "container">
+            <form action="" method="post" class="register">
 
             </form>
         </div>
@@ -21,10 +22,11 @@
         <script src="https://unpkg.com/react-dom@16/umd/react-dom.production.min.js" crossorigin></script>
         <script src="https://unpkg.com/@babel/standalone/babel.min.js"></script>
 
-        <script type="text/babel" src="/static/js/Login/Login1.js"></script>
+        <script type="text/babel" src="/static/js/Register/Register.js"></script>
         <script type="text/babel">
-            ReactDOM.render(<Login1/>, document.querySelector('.login-page'))
+            ReactDOM.render(<Register/>, document.querySelector('.register'))
         </script>
-        <script type="text/javascript" src="/static/js/Login/Background.js"></script>
+
+        <script type="text/javascript" src="/static/js/Register/Background.js"></script>
     </body>
 </html>
