--- a/flaskProject1/templates/Overall.html
+++ b/flaskProject1/templates/Overall.html
@@ -17,7 +17,8 @@
 
         <div class="container">
             <div class="content">
-             
+
+            </div>
         </div>
 
         <footer className="text-center text-white bg-dark" class="Footer" style="background-color: #343a40">
@@ -38,7 +39,7 @@
             ReactDOM.render(<Footer/>, document.querySelector('.Footer'))
         </script>
 
-        <script type="text/babel" src="/static/js/DBLessons/Overall.js"></script>
+        <script type="text/babel" src="/static/js/Classes/Class11/LessonsListDB/DBLessons/Overall.js"></script>
         <script type="text/babel">
             ReactDOM.render(<DBList/>, document.querySelector('.content'))
         </script>
