--- a/flaskProject1/static/css/home.css
+++ b/flaskProject1/static/css/home.css
@@ -71,3 +71,20 @@ i{
 .container{
   padding-bottom: 1px;
 }
+
+  ::-webkit-scrollbar {
+    width: 10px;
+  }
+
+  ::-webkit-scrollbar-track {
+    background: #f1f1f1;
+  }
+
+  ::-webkit-scrollbar-thumb {
+    background: #888;
+    border-radius: 10px;
+  }
+
+  ::-webkit-scrollbar-thumb:hover {
+    background: #555;
+  }
