Created and mooved files to other directories and added Test for page IntroduceInSQL

--- a/flaskProject1/static/css/home.css
+++ b/flaskProject1/static/css/home.css
@@ -64,27 +64,27 @@ h1 {
   top:50%;
 }
 
-i{
-  padding-left: 60px;
+footer{
+  text-align:center;
 }
 
 .container{
   padding-bottom: 1px;
 }
 
-  ::-webkit-scrollbar {
-    width: 10px;
-  }
+::-webkit-scrollbar {
+  width: 10px;
+}
 
-  ::-webkit-scrollbar-track {
-    background: #f1f1f1;
-  }
+::-webkit-scrollbar-track {
+  background: #f1f1f1;
+}
 
-  ::-webkit-scrollbar-thumb {
-    background: #888;
-    border-radius: 10px;
-  }
+::-webkit-scrollbar-thumb {
+  background: #888;
+  border-radius: 10px;
+}
 
-  ::-webkit-scrollbar-thumb:hover {
-    background: #555;
-  }
+::-webkit-scrollbar-thumb:hover {
+  background: #555;
+}
