--- a/flaskProject1/templates/Classes/Class11/Subjects/Databases/dblessons.html
+++ b/flaskProject1/templates/Classes/Class11/Subjects/Databases/dblessons.html
@@ -8,7 +8,7 @@
         <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
         <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
 
-        <link rel = "stylesheet" href="../static/css/dblessons.css">
+        <link rel = "stylesheet" href="../../../../../static/css/dblist.css">
     </head>
     <body>
         <nav class="navbar navbar-expand-lg navbar-dark bg-dark" class="Navbar">
@@ -39,7 +39,7 @@
             ReactDOM.render(<Footer/>, document.querySelector('.Footer'))
         </script>
 
-        <script type="text/babel" src="/static/js/Classes/Class11/LessonsListDB/DBLessons/Overall.js"></script>
+        <script type="text/babel" src="/static/js/Classes/Class11/LessonsListDB/Overall.js"></script>
         <script type="text/babel">
             ReactDOM.render(<DBList/>, document.querySelector('.content'))
         </script>
