--- a/flaskProject1/templates/mainpages/home.html
+++ b/flaskProject1/templates/mainpages/home.html
@@ -8,7 +8,7 @@
         <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
         <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
 
-        <link rel = "stylesheet" href="../static/css/home.css">
+        <link rel = "stylesheet" href="../../static/css/home.css">
     </head>
     <body>
         <nav class="navbar navbar-expand-lg navbar-dark bg-dark" class="Navbar">
@@ -20,7 +20,7 @@
             <h1>Какво е ТУЕС?</h1>
 
             <p>
-                ТУЕС(Технологично Училище Електронни Системи към ТУ) не е просто училище, а цяла една общност. През изминалите години осъзнах колко важни
+                ТУЕС (Технологично Училище Електронни Системи към ТУ) не е просто училище, а цяла една общност. През изминалите години осъзнах колко важни
                 са всъщност приятелствата, които изграждам сега, защото след време ще имам нужда от тях. Начинът и нивото на обучение са различни, от
                 което и да е друго училище и това се отразява много върху личностната самооценка на човек. ТУЕС не е някое квартално училище!
             </p>
@@ -29,6 +29,7 @@
         <div class="parallax1"></div>
         <div class = "content">
             <h1>Нашата цел!</h1>
+
             <p>
                 С ElsysLearn ние целим да подпомогнем учебния процес в ТУЕС, като сме решили да се концентрираме върху специалните предмети.
                 Всички уроци, в тази платформа, ще бъдат водени лично от нас. Затова смятаме, че обучението ученик-ученик би било много полезно.
@@ -45,7 +46,7 @@
         <script src="https://unpkg.com/react-dom@16/umd/react-dom.production.min.js" crossorigin></script>
         <script src="https://unpkg.com/@babel/standalone/babel.min.js"></script>
 
-        <script type="text/babel" src="/static/js/HomePage/LoggedInNavbar.js"></script>
+        <script type="text/babel" src="/static/js/HomePage/Navbar.js"></script>
         <script type="text/babel">
             ReactDOM.render(<Navbar/>, document.querySelector('.Navbar'))
         </script>
@@ -54,6 +55,5 @@
         <script type="text/babel">
             ReactDOM.render(<Footer/>, document.querySelector('.Footer'))
         </script>
-
     </body>
 </html>
