--- a/flaskProject1/static/css/dblessons.css
+++ b/flaskProject1/static/css/dblessons.css
@@ -23,9 +23,11 @@ body{
   padding: 5vmin 10vmin;
   position: relative;
   text-align:center;
-  top:50%;
+  top:100%;
+  margin-top: -40%;
   transform:translate(-50%, -50%);
   height: 745px;
+  
 }
 
 .Footer{
