Added code for LIKE button but js is not working correctly, code is commented

--- a/flaskProject1/static/css/dblessons.css
+++ b/flaskProject1/static/css/dblessons.css
@@ -165,3 +165,21 @@ h1{
   padding-left: 15px;
 }
 
+@import url("https://fonts.googleapis.com/css2?family=Open+Sans:wght@600&display=swap");
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
+.like__btn {
+  padding: 10px 15px;
+  background: #0080ff;
+  font-size: 18px;
+  font-family: "Open Sans", sans-serif;
+  border-radius: 5px;
+  color: #e8efff;
+  outline: none;
+  border: none;
+  cursor: pointer;
+}
