--- a/flaskProject1/static/css/dblessons.css
+++ b/flaskProject1/static/css/dblessons.css
@@ -26,7 +26,7 @@ body{
   top:100%;
   margin-top: -40%;
   transform:translate(-50%, -50%);
-  height: 745px;
+  height: 780px;
   
 }
 
@@ -80,7 +80,7 @@ h1{
 }
 
 #video_exercise{
-    height: 600px;
+    height: 670px;
     overflow: auto;
     width: 1000px;
 }
@@ -130,6 +130,9 @@ h1{
   margin-top: -77px;
   margin-bottom: -100px;
 }
+#upr{
+    margin-top: 40px;
+}
 
 #Test{
   float: left;
@@ -173,8 +176,11 @@ h1{
 }
 
 .like__btn {
-  padding: 10px 15px;
-  background: #0080ff;
+  float: right;
+  margin-right: 15px;
+  margin-top: 10px;
+  padding: 10px 30px;
+  background: #474b4e;
   font-size: 18px;
   font-family: "Open Sans", sans-serif;
   border-radius: 5px;
@@ -182,4 +188,11 @@ h1{
   outline: none;
   border: none;
   cursor: pointer;
+}
+
+.like__btn:hover{
+  text-decoration: none;
+  background-color: #373b3e;
+  border-radius: 4px;
+  color: white;
 }
