--- a/flaskProject1/templates/mainpages/home.html
+++ b/flaskProject1/templates/mainpages/home.html
@@ -38,7 +38,7 @@
 
         <div class="parallax2"></div>
 
-        <footer className="text-center text-white bg-dark" class="Footer" style="background-color: #343a40">
+        <footer class="text-center text-white bg-dark" class="Footer" style="background-color: #343a40">
 
         </footer>
 
