Grades email working

--- a/flaskProject1/templates/mainpages/grades.html
+++ b/flaskProject1/templates/mainpages/grades.html
@@ -18,7 +18,7 @@
 
         <div class="container">
             <div class="content">
-                <h1>Username(Email): {Username}({Email})</h1>
+                <h1>Username(Email): {{name}}({{email}})</h1>
                 <h2>Средни оценки</h2>
                 <div id="grades">
                     <h2 id="Subject">Предмет:</h2>
