Ajax now working

--- a/flaskProject1/templates/Classes/Class11/Subjects/Databases/Lessons/AgregateFunctions.html
+++ b/flaskProject1/templates/Classes/Class11/Subjects/Databases/Lessons/AgregateFunctions.html
@@ -1,131 +1,54 @@
 <html lang="bg">
-<head>
-    <title>Home</title>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
-    <script type="text/javascript" src="/static/js/Classes/Class11/LessonsListDB/AgregateFunctions/test.js"></script>
+    <head>
+        <title>Home</title>
+        <meta charset="utf-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
+        <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
 
+        <link rel = "stylesheet" href="../../../../../../static/css/dblessons.css">
+    </head>
+    <body>
+        <nav class="navbar navbar-expand-lg navbar-dark bg-dark" class="Navbar">
 
-    <link rel="stylesheet" href="../../../../../../static/css/dblessons.css">
-</head>
-<body>
-<nav class="navbar navbar-expand-lg navbar-dark bg-dark" class="Navbar">
+        </nav>
 
-</nav>
+        <div class="container">
+            <div class="content">
 
-<div class="container">
-    <div class="content">
-
-        <h1>Основни агрегатни функции</h1>
-
-        <div id="video_exercise">
-            <h2>Видео Урок:</h2>
-
-            <a href="#Test" id="test_button">Тест върху материала</a>
-
-            <iframe width="960" height="540" src="https://www.youtube.com/embed/2bW3HuaAUcY"
-                    title="YouTube video player"
-                    frameborder="0"
-                    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-                    allowfullscreen></iframe>
-
-            <button className="like__btn" onclick="Liked()">
-                <span id="icon"><i className="far fa-thumbs-up"></i></span>
-                <span id="count">0</span> Like
-            </button>
-
-            <div id="upr">
-                <h2> Упражнение:</h2>
-
-                <div id="Test">
-                    <form name="quiz" id="quiz">
-                        <div id="question">
-                            <p>1. Колко на брой са агрегатните функции, които разглеждаме в този видео урок?</p>
-                            <p><input type="radio" name="question1" value="Option1"/>a) 2</p>
-                            <p><input type="radio" name="question1" value="Option2"/>b) 3</p>
-                            <p><input type="radio" name="question1" value="Option3"/>c) 5</p>
-                            <p><input type="radio" name="question1" value="Option4"/>d) Нито един от посочените</p>
-                        </div>
-
-                        <div id="question">
-                            <p>2. Кои от изброените по долу са агрегатни функции?</p>
-                            <p><input type="radio" name="question2" value="Option1"/>a) SUM</p>
-                            <p><input type="radio" name="question2" value="Option2"/>b) MULT</p>
-                            <p><input type="radio" name="question2" value="Option3"/>c) MIN</p>
-                            <p><input type="radio" name="question2" value="Option4"/>d) MAX</p>
-                        </div>
-
-                        <div id="question">
-                            <p>3. Коя заявка е написана правилно?</p>
-                            <p><input type="radio" name="question3" value="Option1"/>a) select COUNT() from table;</p>
-                            <p><input type="radio" name="question3" value="Option2"/>b) get count() from table;</p>
-                            <p><input type="radio" name="question3" value="Option3"/>c) select *COUNT() from table;</p>
-                            <p><input type="radio" name="question3" value="Option4"/>d) select COUNT() where condition;
-                            </p>
-                        </div>
-
-                        <div id="question">
-                            <p>4.Какво прави агрегатната функция AVG?</p>
-                            <p><input type="radio" name="question4" value="Option1"/>a) Взима средно аритметично от
-                                целия ред</p>
-                            <p><input type="radio" name="question4" value="Option2"/>b) Взима средно аритметично от
-                                цялата колона
-                            </p>
-                            <p><input type="radio" name="question4" value="Option3"/>c) Не прави нищо</p>
-                            <p><input type="radio" name="question4" value="Option4"/>d) Нито едно от посочените</p>
-                        </div>
-
-                        <div id="question">
-                            <p>5.Какво пишем когато искаме да зададем условност на агрегатна функция?</p>
-                            <p><input type="radio" name="question5" value="Option1"/>a) Не пишем нищо</p>
-                            <p><input type="radio" name="question5" value="Option2"/>b) when condition</p>
-                            <p><input type="radio" name="question5" value="Option3"/>c) where condition</p>
-                            <p><input type="radio" name="question5" value="Option4"/>d) нито едно от изброените</p>
-                        </div>
-
-                        <div id="question">
-                            <p>6.Какъв тип база е MySQL?</p>
-                            <p><input type="radio" name="question6" value="Option1"/>a) Hierarchical database</p>
-                            <p><input type="radio" name="question6" value="Option2"/>b) Relational database</p>
-                            <p><input type="radio" name="question6" value="Option3"/>c) Document database</p>
-                            <p><input type="radio" name="question6" value="Option4"/>d) NoSQL database</p>
-                        </div>
-
-                        <input type="button" name="" value="Предай" id="button" onclick="Check()"/>
-                    </form>
-                </div>
             </div>
         </div>
-    </div>
-</div>
 
-<footer className="text-center text-white bg-dark" class="Footer" style="background-color: #343a40">
+        <footer className="text-center text-white bg-dark" class="Footer" style="background-color: #343a40">
 
-</footer>
+        </footer>
 
-<script src="https://unpkg.com/react@16/umd/react.production.min.js" crossorigin></script>
-<script src="https://unpkg.com/react-dom@16/umd/react-dom.production.min.js" crossorigin></script>
-<script src="https://unpkg.com/@babel/standalone/babel.min.js"></script>
+        <script src="https://unpkg.com/react@16/umd/react.production.min.js" crossorigin></script>
+        <script src="https://unpkg.com/react-dom@16/umd/react-dom.production.min.js" crossorigin></script>
+        <script src="https://unpkg.com/@babel/standalone/babel.min.js"></script>
 
-<script type="text/babel" src="/static/js/HomePage/LoggedInNavbar.js"></script>
-<script type="text/babel">
-    ReactDOM.render(<Navbar/>, document.querySelector('.Navbar'))
-</script>
+        <script type="text/babel" src="/static/js/HomePage/LoggedInNavbar.js"></script>
+        <script type="text/babel">
+            ReactDOM.render(<Navbar/>, document.querySelector('.Navbar'))
+        </script>
 
-<script type="text/babel" src="/static/js/HomePage/Footer.js"></script>
-<script type="text/babel">
-    ReactDOM.render(<Footer/>, document.querySelector('.Footer'))
-</script>
+        <script type="text/babel" src="/static/js/HomePage/Footer.js"></script>
+        <script type="text/babel">
+            ReactDOM.render(<Footer/>, document.querySelector('.Footer'))
+        </script>
 
-{#<script type="text/babel" src="/static/js/Classes/Class11/LessonsListDB/AgregateFunctions/Overall.js"></script>#}
-{#<script type="text/babel">#}
-{#    ReactDOM.render(<DBList/>, document.querySelector('.content'))#}
-{#</script>#}
+        <script type="text/babel" src="/static/js/Classes/Class11/LessonsListDB/AgregateFunctions/Overall.js"></script>
+        <script type="text/babel">
+            ReactDOM.render(<DBList/>, document.querySelector('.content'))
+        </script>
+
+        <script type="text/babel" src="/static/js/Classes/Class11/LessonsListDB/AgregateFunctions/test.js"></script>
+        <script type="text/babel">
+            ReactDOM.render(<Test/>, document.querySelector('#Test'))
+        </script>
 
 
-</body>
+    </body>
 </html>
