Adding grade to db for every user

--- a/flaskProject1/templates/mainpages/grades.html
+++ b/flaskProject1/templates/mainpages/grades.html
@@ -1,5 +1,6 @@
 <html lang="bg">
     <head>
+        <link rel="icon" href="data:,">
         <title>Grades</title>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -33,7 +34,7 @@
                         <p class="Subject add">Оерационни системи</p>
                         <p class="add">5</p>
                         <p class="Subject add">Бази данни</p>
-                        <p class="add">6</p>
+                        <p class="add">{{grade}}</p>
                         <p class="Subject add">МОП</p>
                         <p class="add">6</p>
                         <p class="Subject add last"></p>
