Final version ready for 6

--- a/flaskProject1/templates/mainpages/grades.html
+++ b/flaskProject1/templates/mainpages/grades.html
@@ -26,17 +26,17 @@
                     <h2 class="Grades">Оценка:</h2>
                     <div id="table">
                         <p class="Subject">Математика</p>
-                        <p>6</p>
+                        <p>-</p>
                         <p class="Subject add">ООП</p>
-                        <p class="add">5</p>
+                        <p class="add">-</p>
                         <p class="Subject add">Разработка на софтуер</p>
-                        <p class="add">6</p>
-                        <p class="Subject add">Оерационни системи</p>
-                        <p class="add">5</p>
+                        <p class="add">-</p>
+                        <p class="Subject add">Операционни системи</p>
+                        <p class="add">-</p>
                         <p class="Subject add">Бази данни</p>
                         <p class="add">{{grade}}</p>
-                        <p class="Subject add">МОП</p>
-                        <p class="add">6</p>
+                        <p class="Subject add">МОПР</p>
+                        <p class="add">-</p>
                         <p class="Subject add last"></p>
                         <p class="add last"></p>
                         <p class="Subject add last last1"></p>
